--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,8 @@ services:
           - 'maps.workadventure.localhost'
 
   front:
-    image: thecodingmachine/nodejs:14
+    image: thecodingmachine/nodejs:14-apache
+    working_dir: /../../../usr/src/app/
     environment:
       DEBUG_MODE: "$DEBUG_MODE"
       JITSI_URL: $JITSI_URL
@@ -37,6 +38,7 @@ services:
       UPLOADER_URL: //uploader.workadventure.localhost
       #ADMIN_URL: //workadventure.localhost
       ICON_URL: //icon.workadventure.localhost
+      STARTUP_COMMAND_0: cd ./../../../usr/src/app/
       STARTUP_COMMAND_1: ./templater.sh
       STARTUP_COMMAND_2: yarn install
       STUN_SERVER: "stun:stun.l.google.com:19302"
