--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Docker pour azure
       run: |
-        docker-compose push idacrossingcr.azurecr.io/workadventureserver:1
+        docker-compose push 
