Revert "Update prod.yml"
This reverts commit b43c1d8c5aa30f75663f27b2bf715ae604475ca9.

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,4 +26,5 @@ jobs:
 
     - name: Docker pour azure
       run: |
-        docker-compose push idacrossingcr.azurecr.io/workadventureserver:1
+        docker build . -t idacrossingcr.azurecr.io/workadventure:1
+        docker push idacrossingcr.azurecr.io/workadventure:1
